--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <style>
+      body{
+        font-family: 'Girassol', cursive;
+        font-size: 48px;
+      }
+    </style>
+    <title>My test page</title>
+  </head>
+  <body>
+    <img class="circular-square" src="images/profile.webp" alt="My test image">
+    Hello World
+  </body>
+</html>
