--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
         font-size: 48px;
       }
     </style>
-    <title>My test page</title>
+    <title>Welcome to my Web Page :)</title>
   </head>
   <body>
     <img class="circular-square" src="images/profile.webp" alt="My test image">
-    Hello World
+    Thanks for visiting, the website is under construction as I learn some web developement.
+    <div class='section-1'>
+      <p>My Hobbies</p>
+    <ul>
+      <li>Coding</li>
+        <ul>
+          <li>My codeforces profile: <a href="https://codeforces.com/profile/gajrajgchouhan">Click me</a> </li>
+          <li>My codechef profile: <a href="https://www.codechef.com/users/gajrajgchouhan">Click me</a></li>
+      <li>Listening to Music</li>
+    </ul>
+
   </body>
 </html>
