--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <img class="circular-square" src="images/profile.webp" alt="My test image">
     Thanks for visiting, the website is under construction as I learn some web developement.
     <div class='section-1'>
-      <p>My Hobbies</p>
+      <p><u>My Hobbies:</u></p>
     <ul>
       <li>Coding</li>
         <ul>
           <li>My codeforces profile: <a href="https://codeforces.com/profile/gajrajgchouhan">Click me</a> </li>
           <li>My codechef profile: <a href="https://www.codechef.com/users/gajrajgchouhan">Click me</a></li>
+        </ul>
       <li>Listening to Music</li>
     </ul>
 
