--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
-    <meta charset="utf-8">
-    <style>
-      body{
-        font-family: 'Girassol', cursive;
-        font-size: 24px;
-      }
-    </style>
     <title>Welcome to my Web Page :)</title>
   </head>
   <body>
-    <img class="circular-square" src="images/profile.webp" alt="My test image">
+    <img class="circular-square" src="images/profile.webp">
     Thanks for visiting, the website is under construction as I learn some web developement.
     <div class='section-1'>
       <p><u>My Hobbies:</u></p>
@@ -25,6 +21,6 @@
         </ul>
       <li>Listening to Music</li>
     </ul>
-
+    </div>
   </body>
 </html>
