--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
       <li>Listening to Music</li>
     </ul>
     </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JL5JSSFHP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-0JL5JSSFHP');
+    </script>
   </body>
 </html>
