--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
-    <title>Welcome to my Web Page :)</title>
-  </head>
-  <body>
-    <img class="circular-square" src="images/profile.webp">
-    Thanks for visiting, the website is under construction as I learn some web developement.
-    <div class='section-1'>
-      <p><u>My Hobbies:</u></p>
-    <ul>
-      <li>Coding</li>
-        <ul>
-          <li>My codeforces profile: <a href="https://codeforces.com/profile/gajrajgchouhan">Click me</a> </li>
-          <li>My codechef profile: <a href="https://www.codechef.com/users/gajrajgchouhan">Click me</a></li>
-        </ul>
-      <li>Listening to Music</li>
-    </ul>
-    </div>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JL5JSSFHP"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-0JL5JSSFHP');
-    </script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link href="style.css" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Girassol&display=swap"
+            rel="stylesheet"
+        />
+        <title>Gajraj Singh Chouhan</title>
+    </head>
+    <body>
+        <div style="display: flex; flex-direction: column; gap: 10px">
+            <div>Hi There, I'm Gajraj.</div>
+            <div>I'm a Software Engineer.</div>
+            <div>I'm a senior at IIT Mandi.</div>
+            <div>
+                <div>Checkout my resume ->&nbsp;</div>
+                <div style="height: 1.25rem">
+                    <a href="https://bit.ly/3bv1vor">
+                        <img src="images/resume.png" alt="resume" />
+                    </a>
+                </div>
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 10px">
+                <div>Connect with me,</div>
+                <div style="display: flex; gap: 20px">
+                    <a href="https://www.linkedin.com/in/gajrajgchouhan/">
+                        <img src="images/linkedin.svg" alt="linkedin" />
+                    </a>
+                    <a href="https://www.github.com/in/gajrajgchouhan/">
+                        <img src="images/github.png" alt="github" />
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-0JL5JSSFHP"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-0JL5JSSFHP");
+        </script>
+    </body>
 </html>
