added meta tags and seo stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,60 @@
             href="https://fonts.googleapis.com/css?family=Girassol&display=swap"
             rel="stylesheet"
         />
+        <!-- Primary Meta Tags -->
         <title>Gajraj Singh Chouhan</title>
+        <meta name="title" content="Gajraj Singh Chouhan" />
+        <meta
+            name="description"
+            content="I'm a software engineer, graduating from IIT Mandi."
+        />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://gajraj.dev/" />
+        <meta property="og:title" content="Gajraj Singh Chouhan" />
+        <meta
+            property="og:description"
+            content="I'm a software engineer, graduating from IIT Mandi."
+        />
+        <meta property="og:image" content="" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://gajraj.dev/" />
+        <meta property="twitter:title" content="Gajraj Singh Chouhan" />
+        <meta
+            property="twitter:description"
+            content="I'm a software engineer, graduating from IIT Mandi."
+        />
+        <meta property="twitter:image" content="" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/images/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/images/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/images/favicon-16x16.png"
+        />
+        <link rel="manifest" href="site.webmanifest" />
+        <link
+            rel="mask-icon"
+            href="/images/safari-pinned-tab.svg"
+            color="#a2b231"
+        />
+        <link rel="shortcut icon" href="/images/favicon.ico" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="msapplication-config" content="browserconfig.xml" />
+        <meta name="theme-color" content="#ffffff" />
     </head>
     <body>
         <div style="display: flex; flex-direction: column; gap: 10px">
@@ -19,7 +72,11 @@
             <div>
                 <div>Checkout my resume ->&nbsp;</div>
                 <div style="height: 1.25rem">
-                    <a href="https://bit.ly/3bv1vor">
+                    <a
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://bit.ly/3bv1vor"
+                    >
                         <img src="images/resume.png" alt="resume" />
                     </a>
                 </div>
@@ -27,15 +84,30 @@
             <div style="display: flex; flex-direction: column; gap: 10px">
                 <div>Connect with me,</div>
                 <div style="display: flex; gap: 20px">
-                    <a href="https://www.linkedin.com/in/gajrajgchouhan/">
+                    <a
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://www.linkedin.com/in/gajrajgchouhan/"
+                    >
                         <img src="images/linkedin.svg" alt="linkedin" />
                     </a>
-                    <a href="https://www.github.com/in/gajrajgchouhan/">
+                    <a
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        href="https://www.github.com/gajrajgchouhan/"
+                    >
                         <img src="images/github.png" alt="github" />
                     </a>
                 </div>
             </div>
         </div>
+        <a
+            style="position: absolute; bottom: 0; right: 0; font-size: 10px"
+            href="https://www.flaticon.com/free-icons/desert"
+            title="desert icons"
+            >Favicon created by Freepik - Flaticon</a
+        >
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script
             async
