added seo og image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             property="og:description"
             content="I'm a software engineer, graduating from IIT Mandi."
         />
-        <meta property="og:image" content="" />
+        <meta property="og:image" content="https://gajraj.dev/images/og.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -35,7 +35,10 @@
             property="twitter:description"
             content="I'm a software engineer, graduating from IIT Mandi."
         />
-        <meta property="twitter:image" content="" />
+        <meta
+            property="twitter:image"
+            content="https://gajraj.dev/images/og.png"
+        />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
