Compressed images, added lang

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link href="style.css" rel="stylesheet" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Girassol&display=swap"
-            rel="stylesheet"
-        />
         <!-- Primary Meta Tags -->
         <title>Gajraj Singh Chouhan</title>
         <meta name="title" content="Gajraj Singh Chouhan" />
@@ -80,7 +76,12 @@
                         rel="noopener noreferrer"
                         href="https://bit.ly/3bv1vor"
                     >
-                        <img src="images/resume.png" alt="resume" />
+                        <img
+                            height="32"
+                            width="32"
+                            src="images/resume.png"
+                            alt="resume"
+                        />
                     </a>
                 </div>
             </div>
@@ -92,14 +93,24 @@
                         rel="noopener noreferrer"
                         href="https://www.linkedin.com/in/gajrajgchouhan/"
                     >
-                        <img src="images/linkedin.svg" alt="linkedin" />
+                        <img
+                            height="32"
+                            width="32"
+                            src="images/linkedin.svg"
+                            alt="linkedin"
+                        />
                     </a>
                     <a
                         target="_blank"
                         rel="noopener noreferrer"
                         href="https://www.github.com/gajrajgchouhan/"
                     >
-                        <img src="images/github.png" alt="github" />
+                        <img
+                            height="32"
+                            width="32"
+                            src="images/github.png"
+                            alt="github"
+                        />
                     </a>
                 </div>
             </div>
