--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                     </a>
                 </div>
             </div>
+            <div>
+                <span>Checkout my blog</span>
+                &nbsp;
+                <a href="https://blog.gajraj.dev">here</a> !
+            </div>
             <div class="resumeDiv" style="margin: 5px">
                 <div>Checkout my resume ->&nbsp;</div>
                 <div style="display: flex; gap: 0.5rem; height: 1.25rem">
